--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.jpa.show-sql=true
 
+
+spring.datasource.username=root
+spring.datasource.password=doublecharizard12
+spring.datasource.url = jdbc:mysql://localhost:3306/projectmanagementtool?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
+
+spring.jpa.database-platform= org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=update
