--- a/pmt-react-client/package.json
+++ b/pmt-react-client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
+    "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -24,9 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "proxy": "http://localhost:8080",
-
   "eslintConfig": {
     "extends": "react-app"
   },
