preparing for deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.jpa.show-sql=true
 
-
-spring.datasource.username=root
-spring.datasource.password=doublecharizard12
-spring.datasource.url = jdbc:mysql://localhost:3306/projectmanagementtool?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
+spring.datasource.url = jdbc:mysql://@us-cdbr-iron-east-04.cleardb.net/heroku_2e3c5a30361a161?reconnect=true&useLegacyDatetimeCode=false&serverTimezone=Turkey
+spring.datasource.username=b5f8f674f1cb78
+spring.datasource.password=5adcff1b
 
 spring.jpa.database-platform= org.hibernate.dialect.MySQL5Dialect
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
